deleted white space in the text area form (not a css fix) image background in stylesheet change

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -55,7 +55,7 @@ h1 {
   -moz-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
-  background-image: url("/images/contours.svg");
+  background-image: url("../images/contours.svg");
 }
 
 //any semblance of a grid
